chore: add umami analytics - closes #58

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
     <link rel="manifest" href="favicon/site.webmanifest" />
 
+    <!-- Umami analytics -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="cfcae731-c318-4de0-83ea-55fb7f92e707"></script>
+
     <title>Unwind Chimes</title>
   </head>
 
