feat: add link to source code, add SEO tags - closes #60, closes #34

--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!doctype html>
 <html lang="en" class="bg-neutral-100 dark:bg-black">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
-    <link rel="shortcut icon" href="favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="favicon/site.webmanifest" />
+  <title>Unwind Chimes - Wind Chime Simulator</title>
+  <!-- SEO -->
+  <meta name="description"
+    content="Unwind Chimes generates soothing, real-time ambient soundscapes using weather data." />
+  <meta name="author" content="Luke" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Unwind Chimes - Wind Chime Simulator" />
+  <meta property="og:description"
+    content="Generate soothing, real-time ambient soundscapes from weather data with Unwind Chimes." />
+  <meta property="og:url" content="https://unwind-chimes.vercel.app" />
+  <meta property="og:site_name" content="Unwind Chimes" />
 
-    <!-- Umami analytics -->
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="cfcae731-c318-4de0-83ea-55fb7f92e707"></script>
+  <!-- Font awesome -->
+  <script src="https://kit.fontawesome.com/9ab3110fa7.js" crossorigin="anonymous"></script>
 
-    <title>Unwind Chimes</title>
-  </head>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+  <link rel="shortcut icon" href="favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="favicon/site.webmanifest" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Umami analytics -->
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="cfcae731-c318-4de0-83ea-55fb7f92e707"></script>
+
+  <title>Unwind Chimes</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
