chore: improve seo, include og protocol and twitter preview, etc - closes #65

--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Unwind Chimes - Wind Chime Simulator</title>
+
   <!-- SEO -->
-  <meta name="description"
-    content="Unwind Chimes generates soothing, real-time ambient soundscapes using weather data." />
+  <meta name="keywords" content="wind chime simulator, ambient sounds, relaxation, meditation, soundscape generator" />
+  <meta name="description" content="Unwind Chimes generates soothing, ambient soundscapes using the world's climate." />
   <meta name="author" content="Luke" />
   <meta name="robots" content="index, follow" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Unwind Chimes - Wind Chime Simulator" />
   <meta property="og:description"
-    content="Generate soothing, real-time ambient soundscapes from weather data with Unwind Chimes." />
+    content="Generate soothing, ambient soundscapes from the world's climate with Unwind Chimes." />
+  <meta property="og:image" content="https://unwind-chimes.vercel.app/og-image.webp" />
   <meta property="og:url" content="https://unwind-chimes.vercel.app" />
   <meta property="og:site_name" content="Unwind Chimes" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Unwind Chimes - Wind Chime Simulator" />
+  <meta name="twitter:description"
+    content="Generate soothing, ambient soundscapes from the world's climate with Unwind Chimes." />
+  <meta name="twitter:image" content="https://unwind-chimes.vercel.app/og-image.webp" />
+
+  <link rel="canonical" href="https://unwind-chimes.vercel.app/" />
+  <link rel="preload" as="image" href="https://unwind-chimes.vercel.app/og-image.webp" />
 
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/9ab3110fa7.js" crossorigin="anonymous"></script>
@@ -31,7 +41,22 @@
   <!-- Umami analytics -->
   <script defer src="https://cloud.umami.is/script.js" data-website-id="cfcae731-c318-4de0-83ea-55fb7f92e707"></script>
 
-  <title>Unwind Chimes</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Unwind Chimes",
+      "url": "https://unwind-chimes.vercel.app/",
+      "description": "Generate soothing, ambient soundscapes from the world's climate with Unwind Chimes.",
+      "applicationCategory": "EntertainmentApplication",
+      "operatingSystem": "All",
+      "image": "https://unwind-chimes.vercel.app/og-image.webp",
+      "author": {
+        "@type": "Person",
+        "name": "Luke Sullivan"
+      }
+    }
+    </script>
 </head>
 
 <body>
