fix: replace FA with github svg - closes #64

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Unwind Chimes - Wind Chime Simulator</title>
 
   <!-- SEO -->
-  <meta name="keywords" content="wind chime simulator, ambient sounds, relaxation, meditation, soundscape generator" />
+  <meta name="keywords" content="wind chime simulator, ambient sounds, relaxation, meditation, soundscape generator, weather" />
   <meta name="description" content="Unwind Chimes generates soothing, ambient soundscapes using the world's climate." />
   <meta name="author" content="Luke" />
   <meta name="robots" content="index, follow" />
